# OpenEnv

./: .gitignore  Dockerfile  README.md  inference.py  inference_output.txt  openenv.yaml  pyproject.toml
nl_reward_env/: __init__.py  baseline.py  client.py  config.py  environment.py  models.py  reward_interpreter.py
nl_reward_env/graders/: __init__.py  deterministic.py
nl_reward_env/tasks/: __init__.py  definitions.py
openenv_natural_language_reward_definition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: validate-submission.sh
server/: app.py  natural_language_reward_environment.py
tests/: test_environment.py
